// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> match the snapshot without an icon 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {
        "marginVertical": 8,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(73, 69, 79, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flexGrow": 1,
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "overflow": "hidden",
          },
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": 4,
              },
            ],
            "width": 750,
            "zIndex": 3,
          }
        }
      >
        <View
          style={
            {
              "width": 97.33333333333333,
            }
          }
        >
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            numberOfLines={1}
            onLayout={[Function]}
            onTextLayout={[Function]}
            style={
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": undefined,
                "left": 0,
                "letterSpacing": 0.15,
                "lineHeight": undefined,
                "maxWidth": 97.33333333333333,
                "opacity": 0,
                "paddingLeft": 16,
                "paddingRight": 56,
                "position": "absolute",
                "textAlign": "left",
                "top": 30,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -12,
                  },
                  {
                    "scale": 0.75,
                  },
                ],
                "writingDirection": "ltr",
              }
            }
            testID="text-input-flat-label-active"
          >
            Credit Card
          </Text>
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            numberOfLines={1}
            style={
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": undefined,
                "left": 0,
                "letterSpacing": 0.15,
                "lineHeight": undefined,
                "maxWidth": 97.33333333333333,
                "opacity": 0,
                "paddingLeft": 16,
                "paddingRight": 56,
                "position": "absolute",
                "textAlign": "left",
                "top": 30,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -12,
                  },
                  {
                    "scale": 0.75,
                  },
                ],
                "writingDirection": "ltr",
              }
            }
            testID="text-input-flat-label-inactive"
          >
            Credit Card
          </Text>
        </View>
      </View>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "flexGrow": 1,
            "margin": 0,
          },
          {},
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": undefined,
            "minWidth": 65,
            "paddingLeft": 16,
            "paddingRight": 56,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          {
            "marginRight": 40,
            "paddingRight": 16,
          },
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="1234 5678 9012 3456"
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "position": "absolute",
          "width": 24,
        },
        {
          "right": 16,
          "top": 16,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "height": 40,
          "margin": 0,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "width": 40,
        }
      }
      testID="right-icon-adornment-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderColor": "rgba(121, 116, 126, 1)",
            "borderRadius": 20,
            "borderWidth": 0,
            "elevation": 0,
            "flex": 1,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="right-icon-adornment-container"
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityTraits="button"
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          centered={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
                {
                  "borderRadius": 20,
                },
              ],
            ]
          }
          testID="right-icon-adornment"
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "material-community",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Input /> matches the snapshot with label and icon 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {
        "marginVertical": 8,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(73, 69, 79, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flexGrow": 1,
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "overflow": "hidden",
          },
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": 4,
              },
            ],
            "width": 750,
            "zIndex": 3,
          }
        }
      >
        <View
          style={
            {
              "width": 97.33333333333333,
            }
          }
        >
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            numberOfLines={1}
            onLayout={[Function]}
            onTextLayout={[Function]}
            style={
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": undefined,
                "left": 0,
                "letterSpacing": 0.15,
                "lineHeight": undefined,
                "maxWidth": 97.33333333333333,
                "opacity": 0,
                "paddingLeft": 16,
                "paddingRight": 56,
                "position": "absolute",
                "textAlign": "left",
                "top": 30,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -12,
                  },
                  {
                    "scale": 0.75,
                  },
                ],
                "writingDirection": "ltr",
              }
            }
            testID="text-input-flat-label-active"
          >
            Credit Card
          </Text>
          <Text
            collapsable={false}
            maxFontSizeMultiplier={1.5}
            numberOfLines={1}
            style={
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": undefined,
                "left": 0,
                "letterSpacing": 0.15,
                "lineHeight": undefined,
                "maxWidth": 97.33333333333333,
                "opacity": 0,
                "paddingLeft": 16,
                "paddingRight": 56,
                "position": "absolute",
                "textAlign": "left",
                "top": 30,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -12,
                  },
                  {
                    "scale": 0.75,
                  },
                ],
                "writingDirection": "ltr",
              }
            }
            testID="text-input-flat-label-inactive"
          >
            Credit Card
          </Text>
        </View>
      </View>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "flexGrow": 1,
            "margin": 0,
          },
          {},
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": undefined,
            "minWidth": 65,
            "paddingLeft": 16,
            "paddingRight": 56,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          {
            "marginRight": 40,
            "paddingRight": 16,
          },
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="1234 5678 9012 3456"
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "position": "absolute",
          "width": 24,
        },
        {
          "right": 16,
          "top": 16,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "height": 40,
          "margin": 0,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "width": 40,
        }
      }
      testID="right-icon-adornment-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderColor": "rgba(121, 116, 126, 1)",
            "borderRadius": 20,
            "borderWidth": 0,
            "elevation": 0,
            "flex": 1,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="right-icon-adornment-container"
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityTraits="button"
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          centered={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
                {
                  "borderRadius": 20,
                },
              ],
            ]
          }
          testID="right-icon-adornment"
        >
          <Text />
        </View>
      </View>
    </View>
  </View>
</View>
`;
